--- a/src/app/formulario/formulario.page.html
+++ b/src/app/formulario/formulario.page.html
@@ -13,7 +13,7 @@
 
 <ion-content [fullscreen]="true">
   <ion-img [src]="image"></ion-img>
-  <form [formGroup]="form">
+  <form [formGroup]="form" (submit)="cadastroButton()">
      <ion-item>
         <ion-input label="Nome do Item" placeholder="Digite o nome do Item" label-placement="floating" formControlName="item" type="text"></ion-input>
       </ion-item>
@@ -22,7 +22,7 @@
         <ion-input label="Quantidade" placeholder="Digite a Quantidade" label-placement="floating"  formControlName="quantidade" type="text"></ion-input>
       </ion-item>
       
-      <ion-button color="danger" expand="block" [disabled]="!form.valid"> {{nameButton}} </ion-button>
+      <ion-button type="submit" color="danger" expand="block" [disabled]="form.invalid"> {{nameButton}} </ion-button>
       
       
   </form>
